update  ansible configure

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -18,7 +18,7 @@ poll_interval=1
 gathering=smart
 fact_caching_timeout=43200
 fact_caching=jsonfile
-fact_caching_connection=/tmp/.ansible_fact_cache
+fact_caching_connection=.ansible_fact_cache
 
 callback_whitelist = timer, profile_tasks
 
@@ -28,6 +28,6 @@ forks = 50
 become = True
 
 [ssh_connection]
-ssh_args = -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no
+ssh_args = -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ControlMaster=auto -o ControlPath=~/.ssh/%r@%h:%p.socket -o ControlPersist=60m
 retries = 15
 
