--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+# deprecation_warnings=False
 host_key_checking = false
 
 inventory = ./inventory
@@ -20,7 +21,8 @@ fact_caching_timeout=43200
 fact_caching=jsonfile
 fact_caching_connection=.ansible_fact_cache
 
-callback_whitelist = timer, profile_tasks
+# callback_whitelist = timer, profile_tasks
+callbacks_enabled=timer,profile_tasks
 
 forks = 50
 
