fix. reinstall latest failed

--- a/ansible_playbooks/roles/kubeadm/tasks/install.yml
+++ b/ansible_playbooks/roles/kubeadm/tasks/install.yml
@@ -11,8 +11,7 @@
 - name: Install kubeadm
   yum:
     name: 
-      - kubeadm
       - kubelet
-      # - kubectl
-    state: latest
-    
+      - kubeadm
+      - kubectl
+    state: present
